# webman

./: .gitignore  Dockerfile  README.md  celery_config.py  config.py  dependencies.py  docker-compose.yml  flower_config.py  main.py  pyproject.toml  tasks.py
.github/workflows/: deploy.yml
db/: db_connections.py
dtos/requests/: website_analysis.py
dtos/responses/: accessibility_response.py  performance_response.py  responsiveness_response.py
log_management/: log_management.py  logging_config.py
services/: crawler.py  performance_analyzer.py  responsiveness_analyzer.py  url_validator.py  validators.py  web_accessibility_analyzer.py
tests/: test_performance_analyzer.py  test_web_accessibility_analyzer.py  test_webpage_responsiveness_analyzer.py
